syntax = "proto3";   // 语法版本

// stub选项
option java_package = "com.github.qilihui.usercenter.grpc";
option java_outer_classname = "Base";
option java_multiple_files = true;

// 定义包名
package grpc;

// 服务接口定义，服务端和客户端都要遵守该接口进行通信
service TestService {
  rpc getDate (TestRequest) returns (TestResponse) {}
}

// 定义消息（请求）
message TestRequest {
  string userName = 1;
}

// 定义消息（响应）
message TestResponse {
  string serverDate = 1;
}
